<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FormEntry">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/white"
       android:orientation="vertical">
       <TextView
           style="@style/bold"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="20dp"
           android:text="@string/title_form"
           android:textAlignment="center" />


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal">

           <TextView
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="1"
               android:text="@string/title_nik" />

           <EditText
               android:id="@+id/etNIK"
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:layout_weight="2"
               android:background="@drawable/et_card"
               android:hint="@string/hint_nik"
               android:padding="8dp" />
       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal">

           <TextView
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="1"
               android:text="@string/title_nama" />

           <EditText
               android:id="@+id/etNama"
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:layout_weight="2"
               android:background="@drawable/et_card"
               android:hint="@string/hint_nama"
               android:padding="8dp" />
       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal">

           <TextView
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="1"
               android:text="@string/title_noHP" />

           <EditText
               android:id="@+id/etNoHp"
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:layout_weight="2"
               android:background="@drawable/et_card"
               android:hint="@string/hint_noHp"
               android:padding="8dp" />
       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal">

           <TextView
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="1"
               android:text="@string/title_JK" />

           <RadioGroup
               android:id="@+id/radioGroup"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="2"
               android:orientation="horizontal">

               <RadioButton
                   android:id="@+id/rbLakiLaki"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/rb_laki" />

               <RadioButton
                   android:id="@+id/rbPerempuan"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/rb_perem" />
           </RadioGroup>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal">

           <TextView
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_vertical"
               android:layout_weight="1"
               android:text="@string/title_tanggal" />

           <EditText
               android:id="@+id/etTanggal"
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_gravity="end"
               android:layout_weight="2"
               android:focusable="false"
               android:clickable="true"
               android:background="@drawable/et_card"
               android:hint="@string/hint_tgl"
               android:padding="8dp" />
       </LinearLayout>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal">

           <TextView
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/title_alamat" />

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="2"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <EditText
                   android:id="@+id/etAlamat"
                   style="@style/regular"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="end"
                   android:background="@drawable/et_card"
                   android:hint="@string/hint_alamat"
                   android:layout_marginBottom="10dp"
                   android:padding="8dp" />
               <Button
                   android:id="@+id/btnLokasi"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/title_btn_lokasi" />

           </LinearLayout>

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:orientation="horizontal">

           <TextView
               style="@style/regular"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/title_gambar" />

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="2"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <ImageView
                   android:id="@+id/imgView"
                   style="@style/regular"
                   android:layout_width="match_parent"
                   android:layout_height="100dp"
                   android:layout_gravity="start"
                   android:src="@drawable/et_card"
                   android:layout_marginBottom="10dp"
                   android:padding="8dp"
                   android:contentDescription="@string/deskripsi_foto" />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <Button
                       android:id="@+id/btnGaleri"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginEnd="10dp"
                       android:text="@string/text_btn_galeri" />
                   <Button
                       android:id="@+id/btnCamera"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/text_btn_camera" />
               </LinearLayout>

           </LinearLayout>

       </LinearLayout>

       <Button
           android:id="@+id/btnSubmit"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:text="@string/submit"
           />
   </LinearLayout>

</ScrollView>